MDEV-19819 ALTER from POINT to LINESTRING erroneously preserves POINT values